@@ -24,8 +24,12 @@ $Id$
 (No Changes)
 
 ==================  3.3.0-dev ==============
+  
+Bug Fixes
+----------------------
 
-(No Changes)
+* SOLR-2579: UIMAUpdateRequestProcessor ignore error fails if text.length() < 100.
+  (Elmer Garduno via koji)
 
 ==================  3.2.0 ==================
 
